Crash: Changing any editor to the properties crashes Blender #68705

Closed
opened 2019-08-15 20:18:26 +02:00 by Erick Tukuniata · 11 comments

Blender Version
Broken: b7f86ff722
Worked: b7f86ff722~

Short description of error
Changing any editor to the properties editor crashes Blender

Exact steps for others to reproduce the error

With default scene:

Change any editor to the properties editor will crash Blender.

**Blender Version** Broken: b7f86ff722 Worked: b7f86ff722~ **Short description of error** Changing any editor to the properties editor crashes Blender **Exact steps for others to reproduce the error** With default scene: Change any editor to the properties editor will crash Blender.

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

Confirmed on today's build also

blender-2.81-5d72ceb8d806-win64

Confirmed on today's build also > blender-2.81-5d72ceb8d806-win64
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm this, checking...

Can confirm this, checking...
Dalai Felinto self-assigned this 2019-08-15 20:56:28 +02:00
Member

caused by b7f86ff722

caused by b7f86ff722
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel

Crash: //source/blender/editors/space_buttons/buttons_context.c:788:12: runtime error: member access within null pointer of type 'struct SpaceProperties'
Full backtrack: P1069

The crash happens after calling an inocent CTX_data_scene(C); (which in turn runs into a NULL CTX_wm_space_properties(C) that leads to a crash.

Crash: `//source/blender/editors/space_buttons/buttons_context.c:788:12: runtime error: member access within null pointer of type 'struct SpaceProperties'` Full backtrack: [P1069](https://archive.blender.org/developer/P1069.txt) The crash happens after calling an inocent `CTX_data_scene(C);` (which in turn runs into a NULL CTX_wm_space_properties(C) that leads to a crash.

This issue was referenced by cbd1739004

This issue was referenced by cbd1739004f854f4970f95ea3ed512f2aecf2fe7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

For the records, the bug was actually introduced on the "cleanup" commit: a287153ee4.

For the records, the bug was actually introduced on the "cleanup" commit: a287153ee4.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68705
No description provided.