Fix T68705: Changing any editor to the properties crashes Blender

Issue introduced (more like exposed) in b7f86ff72273.