source/blender/editors/space_buttons/buttons_context.c
@@ -785,11 +785,11 @@ int buttons_context(const bContext *C, const char *member, bContextDataResult *r
   SpaceProperties *sbuts = CTX_wm_space_properties(C);
   ButsContextPath *path = sbuts ? sbuts->path : NULL;
 
-  if (sbuts->mainb == BCONTEXT_TOOL) {
+  if (!path) {
     return 0;
   }
 
-  if (!path) {
+  if (sbuts->mainb == BCONTEXT_TOOL) {
     return 0;
   }
 
